--- a/TicketEase/Views/Actors/Index.cshtml
+++ b/TicketEase/Views/Actors/Index.cshtml
@@ -1,12 +1,46 @@
 ﻿
 @*Define modele*@
 @model IEnumerable<Actor>
+
 @*Define ViewData*@
 @{
     ViewData["title"] = "Liste of Actors";
 }
 
-
-
 @*Write code*@
+<div class="row">
+    <div class="col-md-8 offset-md-2">
+
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>@Html.DisplayNameFor(model => model.ProfilePictureURL)</th>
+                    <th>@Html.DisplayNameFor(model => model.FullName)</th>
+                    <th>@Html.DisplayNameFor(model => model.Biographie)</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach(var item in Model){
+                <tr>
+                    <td class="align-middle">
+                                    <img class="rounded-circle border border-4 border-info" src="@item.ProfilePictureURL" alt="@item.FullName" style="max-width: 150px"/>
+                    </td>
+                    <td class="align-middle">
+                            @Html.DisplayFor(ItemDisplay => item.FullName)
+                    </td>
+                    <td class="align-middle">
+                            @Html.DisplayFor(ItemDisplay => item.Biographie)
+                    </td>
+                    <td class="align-middle">
+                        <a class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i> Edit </a> | 
+                        <a class="btn btn-info text-white"><i class="bi bi-eye"></i> Details </a> | 
+                        <a class="btn btn-danger"><i class="bi bi-trash"></i> Delete </a> 
+                    </td>
+                </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
 
