--- a/TicketEase/Views/Actors/Index.cshtml
+++ b/TicketEase/Views/Actors/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @*Define modele*@
 @model IEnumerable<Actor>
-
+  
 @*Define ViewData*@
 @{
     ViewData["title"] = "Liste of Actors";
@@ -13,7 +13,7 @@
 
         <table class="table table-hover">
             <thead>
-                <tr>
+                <tr class="text-center">
                     <th>@Html.DisplayNameFor(model => model.ProfilePictureURL)</th>
                     <th>@Html.DisplayNameFor(model => model.FullName)</th>
                     <th>@Html.DisplayNameFor(model => model.Biographie)</th>
@@ -43,4 +43,5 @@
         </table>
     </div>
 </div>
+
 
