--- a/TicketEase/Views/Shared/_Layout.cshtml
+++ b/TicketEase/Views/Shared/_Layout.cshtml
@@ -7,27 +7,48 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/styleCardsMovies.css" asp-append-version="true" />
+	<link rel="stylesheet" href="~/css/styleFooter.css" asp-append-version="true" />
+	<link rel="stylesheet" href="~/css/ionicons.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/TicketEase.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+		<nav class="navbar navbar-expand-sm navbar-toggleable-sm text-white border-bottom box-shadow mb-3" @*style="background-color: #17a5bc;"*@>
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">TicketEase</a>
+				<a class="navbar-brand font-weight-bold" asp-area="" asp-controller="Movies" asp-action="Index">TicketEase</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
+
+					<ul class="navbar-nav flex-grow-1">
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-area="" asp-controller="Movies" asp-action="Index">
+								<i class="bi bi-film"></i> Movies
+							</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								<i class="bi bi-gear"></i> Management
+							</a>
+
+							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<a class="dropdown-item" asp-controller="Cinemas" asp-action="Index"><i class="bi bi-camera-reels"></i> Cinemas</a>
+								<a class="dropdown-item" asp-controller="Producers" asp-action="Index"><i class="bi bi-headset"></i> Producers</a>
+								<a class="dropdown-item" asp-controller="Actors" asp-action="Index"><i class="bi bi-person-square"></i> Actors</a>
+							</div>
+						</li>
+					</ul>
+
+					<form class="form-inline my-2 my-lg-0 d-flex asp-controller="Movies" asp-action="Filter" style="padding-right: 25px;">
+						<input name="searchString" type="text" class="form-control" placeholder="Search for a movie..." aria-label="Recipient's username" aria-describedby="button-addon2">
+						<button class="btn btn-outline-success my-sm-0" type="submit"><i class="bi bi-search"></i></button>
+					</form>
                 </div>
             </div>
         </nav>
@@ -38,14 +59,108 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - TicketEase - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
+	<footer class="footer-10">
+			<div class="container">
+				<div class="row mb-5 pb-3 no-gutters">
+					<div class="col-md-4 mb-md-0 mb-4 d-flex">
+						<div class="con con-1 w-100 py-5">
+							<div class="con-info w-100 text-center">
+								<div class="icon d-flex align-items-center justify-content-center">
+									<i class="bi bi-telephone-fill text-white"></i>
+								</div>
+								<div class="text">
+									<span>(+00) 1234 5678</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 mb-md-0 mb-4 d-flex">
+						<div class="con con-2 w-100 py-5">
+							<div class="con-info w-100 text-center">
+								<div class="icon d-flex align-items-center justify-content-center">
+									<i class="bi bi-envelope-fill text-white"></i>
+								</div>
+								<div class="text">
+									<span>icketEase@email.com</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 mb-md-0 mb-4 d-flex">
+						<div class="con con-3 w-100 py-5">
+							<div class="con-info w-100 text-center">
+								<div class="icon d-flex align-items-center justify-content-center">
+									<i class="bi bi-geo-fill text-white"></i>
+								</div>
+								<div class="text">
+									<span>203 Fake St. Mountain View, San Francisco, California, USA</span>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-7">
+						<div class="row">
+							<div class="col-md-4 mb-md-0 mb-4">
+								<h2 class="footer-heading">About</h2>
+								<ul class="list-unstyled">
+					  <li><a href="#" class="d-block">Out story</a></li>
+					  <li><a href="#" class="d-block">Awards</a></li>
+					  <li><a href="#" class="d-block">Our Team</a></li>
+					  <li><a href="#" class="d-block">Career</a></li>
+					</ul>
+							</div>
+							<div class="col-md-4 mb-md-0 mb-4">
+								<h2 class="footer-heading">Company</h2>
+								<ul class="list-unstyled">
+					  <li><a href="#" class="d-block">Our services</a></li>
+					  <li><a href="#" class="d-block">Clients</a></li>
+					  <li><a href="#" class="d-block">Contact</a></li>
+					  <li><a href="#" class="d-block">Press</a></li>
+					</ul>
+							</div>
+							<div class="col-md-4 mb-md-0 mb-4">
+								<h2 class="footer-heading">Resources</h2>
+								<ul class="list-unstyled">
+					  <li><a href="#" class="d-block">Blog</a></li>
+					  <li><a href="#" class="d-block">Newsletter</a></li>
+					  <li><a href="#" class="d-block">Privacy Policy</a></li>
+					</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-5 mb-md-0 mb-4">
+						<h2 class="footer-heading">Subscribe</h2>
+						<form action="#" class="subscribe-form">
+			  <div class="form-group d-flex">
+				<input type="text" class="form-control rounded-left" placeholder="Enter email address">
+				<button type="submit" class="form-control submit rounded-right">Subscribe</button>
+			  </div>
+			  <span class="subheading">Get digital marketing updates in your mailbox</span>
+			</form>
+					</div>
+				</div>
+				<div class="row mt-5 pt-4 border-top">
+		  <div class="col-md-6 col-lg-8 mb-md-0 mb-4">
+			<p class="copyright mb-0">
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved. | <a href="https://www.TicketEase.com">TicketEase.com</a>
+  </p>
+		  </div>
+		  <div class="col-md-6 col-lg-4 text-md-right">
+			  <ul class="ftco-footer-social p-0">
+			  <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><span><i class="bi bi-twitter text-white"></i></span></a></li>
+			  <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><span><i class="bi bi-facebook text-white"></i></span></a></li>
+			  <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Instagram"><span><i class="bi bi-instagram text-white"></i></span></a></li>
+			</ul>
+		  </div>
+		</div>
+			</div>
+		</footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/popper.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
