--- a/TicketEase/Views/Movies/Index.cshtml
+++ b/TicketEase/Views/Movies/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+
 @*Define modele*@
 @model IEnumerable<Movie>
 
@@ -9,68 +9,51 @@
 
 @*Write code*@
 <div class="row">
-    <div class="col-md-8 wrapper">
+    <div class="wrapper">
         @foreach(var item in Model){
             <div class="card">
                 <div class="poster"><img src="@item.ImageURL" alt="@item.Name"></div>
                 <div class="details">
-                    <h1>@item.Name</h1>
-                    <h2>2021 • PG • 1hr 38min</h2>
-                    <div class="rating">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
-                        <span>4.2/5</span>
-                    </div>
+                    <h1>
+                        @item.Name
+                        <a class="text-white float-right h6"><i class="bi bi-pencil-square"></i></a>
+                    </h1>
+                    <h2>@item.Description</h2>
                     <div class="tags">
-                        <span class="tag">Italian</span>
-                        <span class="tag">Drama</span>
-                        <span class="tag">Indie</span>
+                            <span class="tag">@item.MovieCategory</span>
                     </div>
                     <p class="desc">
-                        Marco, a disillusioned backpacker in his late 20s, embarks on a solitary journey in search for
-                        meaning.
-                    </p>
-                    <div class="cast">
-                        <h3>Cast</h3>
-                        <ul>
-                            <li><img src="https://i.postimg.cc/jqgkqhSb/cast-11.jpg" alt="Marco Andrews"
-                                    title="Marco Andrews"></li>
-                            <li><img src="https://i.postimg.cc/8P7X7r7r/cast-12.jpg" alt="Rebecca Floyd"
-                                    title="Rebecca Floyd"></li>
-                            <li><img src="https://i.postimg.cc/2SvHwRFk/cast-13.jpg" alt="Antonio Herrera" title="Antonio Herrera"></li>
+                        <ul class="list-unstyled">
+                            <li><span class="text-info">Cinema <i class="bi bi-arrow-bar-right"></i></span> @item.Cinema.Name</li>
+                            <li><span class="text-info">Categorie <i class="bi bi-arrow-bar-right"></i></span> @item.MovieCategory</li>
+                            <li><span class="text-info">Start Date <i class="bi bi-arrow-bar-right"></i></span> @item.StartDate.ToString("dd MMM yy")</li>
+                            <li><span class="text-info">End Date <i class="bi bi-arrow-bar-right"></i></span> @item.EndDate.ToString("dd MMM yy")</li>
+                                <li><span class="text-info">Statut <i class="bi bi-arrow-bar-right"></i></span>
+                                @if(DateTime.Now >= item.StartDate && DateTime.Now <= item.EndDate)
+                                {
+                                    <span class="badge bg-success text-white">AVAILABLE</span>
+                                }
+                                else if(DateTime.Now > item.EndDate)
+                                {
+                                    <span class="badge bg-danger text-white">EXPIRED</span>
+                                }
+                                else
+                                {
+                                    <span class="badge bg-secondary text-white">UPCOMING</span>
+                                }
+                                </li>
                         </ul>
+                    </p>
+                    <div class="col-md-12">
+                        <div class="row">
+                            <div class="btn-group">
+                                <a class="btn btn-outline-info h-75"> <p class="p-size">Show<br/>Details</p></a>
+                                <a class="btn btn-info text-black h-75"> <p class="p-size"><i class="bi bi-cart-plus"></i> Add to Cart <br/> @item.Price DH</p></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         }
     </div>
 </div>
-
-@*<table class="table table-hover">
-            <thead>
-                <tr class="text-center">
-                    <th>@Html.DisplayNameFor(model => model.ImageURL)</th>
-                    <th>@Html.DisplayNameFor(model => model.Name)</th>
-                    <th>@Html.DisplayNameFor(model => model.Description)</th>
-                </tr>
-            </thead>
-            <tbody>
-        @foreach (var item in Model)
-        {
-                        <tr>
-                            <td class="align-middle">
-                                            <img class="rounded-circle border border-4 border-info" src="@item.ImageURL" alt="@item.Name" style="max-width: 150px"/>
-                            </td>
-                            <td class="align-middle">
-                    @Html.DisplayFor(ItemDisplay => item.Name)
-                            </td>
-                            <td class="align-middle">
-                    @Html.DisplayFor(ItemDisplay => item.Description)
-                            </td>
-                        </tr>
-        }
-            </tbody>
-        </table>*@
