Services configuration in Program.cs

--- a/TicketEase/Views/Shared/_Layout.cshtml
+++ b/TicketEase/Views/Shared/_Layout.cshtml
@@ -81,7 +81,7 @@
 									<i class="bi bi-envelope-fill text-white"></i>
 								</div>
 								<div class="text">
-									<span>icketEase@email.com</span>
+									<span>ticketease@gmail.com</span>
 								</div>
 							</div>
 						</div>
