--- a/TicketEase/Views/Actors/Index.cshtml
+++ b/TicketEase/Views/Actors/Index.cshtml
@@ -35,13 +35,17 @@
                     <td class="align-middle">
                         <a class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i> Edit </a> | 
                         <a class="btn btn-info text-white"><i class="bi bi-eye"></i> Details </a> | 
-                        <a class="btn btn-danger"><i class="bi bi-trash"></i> Delete </a> 
+                            <a class="btn btn-danger text-white"><i class="bi bi-trash"></i> Delete </a>
                     </td>
                 </tr>
                 }
             </tbody>
         </table>
     </div>
+</div>
+
+<div style="position:fixed; right:25px; bottom:25px;" class="text-white">
+    <a asp-controller="Actors" asp-action="Create" class="btn btn-success"> <i class="bi bi-plus-circle"></i> Add New </a>
 </div>
 
 
