--- a/TicketEase/Views/Cinemas/Index.cshtml
+++ b/TicketEase/Views/Cinemas/Index.cshtml
@@ -34,8 +34,8 @@
                             @Html.DisplayFor(ItemDisplay => item.Description)
                         </td>
                         <td class="align-middle">
-                            <a class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i> Edit </a> | 
-                            <a class="btn btn-danger"><i class="bi bi-trash"></i> Delete </a> 
+                            <a class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i> Edit </a> |
+                            <a class="btn btn-danger text-white"><i class="bi bi-trash"></i> Delete </a>
                         </td>
                     </tr>
                 }
