--- a/TicketEase/Views/Producers/Index.cshtml
+++ b/TicketEase/Views/Producers/Index.cshtml
@@ -31,8 +31,8 @@
                         </td>
                         <td class="align-middle">
                             <a class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i> Edit </a> | 
-                            <a class="btn btn-info text-white"><i class="bi bi-eye"></i> Details </a> | 
-                            <a class="btn btn-danger"><i class="bi bi-trash"></i> Delete </a> 
+                            <a class="btn btn-info text-white"><i class="bi bi-eye"></i> Details </a> |
+                            <a class="btn btn-danger text-white"><i class="bi bi-trash"></i> Delete </a>
                         </td>
                     </tr>
                 }
