--- a/TicketEase/Views/Shared/_Layout.cshtml
+++ b/TicketEase/Views/Shared/_Layout.cshtml
@@ -16,12 +16,12 @@
 </head>
 <body>
     <header>
-		<nav class="navbar navbar-expand-sm navbar-toggleable-sm text-white border-bottom box-shadow mb-3" @*style="background-color: #17a5bc;"*@>
+		<nav class="navbar navbar-light navbar-expand-sm navbar-toggleable-sm text-white border-bottom box-shadow mb-3" style="background-color: #e3f2fd;">
             <div class="container-fluid">
-				<a class="navbar-brand font-weight-bold" asp-area="" asp-controller="Movies" asp-action="Index">TicketEase</a>
+				<a class="navbar-brand font-weight-bold text-primary" asp-area="" asp-controller="Movies" asp-action="Index">TicketEase</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+					<span class="navbar-toggler-icon"></span>
                 </button>
 
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
@@ -33,21 +33,21 @@
 							</a>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<a class="nav-link dropdown-toggle text-primary" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								<i class="bi bi-gear"></i> Management
 							</a>
 
-							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a class="dropdown-item" asp-controller="Cinemas" asp-action="Index"><i class="bi bi-camera-reels"></i> Cinemas</a>
-								<a class="dropdown-item" asp-controller="Producers" asp-action="Index"><i class="bi bi-headset"></i> Producers</a>
-								<a class="dropdown-item" asp-controller="Actors" asp-action="Index"><i class="bi bi-person-square"></i> Actors</a>
+							<div class="dropdown-menu" style="background-color: #e3f2fd;" aria-labelledby="navbarDropdown">
+								<a class="dropdown-item" asp-controller="Cinemas" asp-action="Index"><i class="bi bi-camera-reels text-primary"></i>  Cinemas</a>
+								<a class="dropdown-item" asp-controller="Producers" asp-action="Index"><i class="bi bi-headset text-primary"></i>  Producers</a>
+								<a class="dropdown-item" asp-controller="Actors" asp-action="Index"><i class="bi bi-person-square text-primary"></i>  Actors</a>
 							</div>
 						</li>
 					</ul>
 
 					<form class="form-inline my-2 my-lg-0 d-flex asp-controller="Movies" asp-action="Filter" style="padding-right: 25px;">
 						<input name="searchString" type="text" class="form-control" placeholder="Search for a movie..." aria-label="Recipient's username" aria-describedby="button-addon2">
-						<button class="btn btn-outline-success my-sm-0" type="submit"><i class="bi bi-search"></i></button>
+						<button class="btn btn-outline-primary my-sm-0" type="submit"><i class="bi bi-search"></i></button>
 					</form>
                 </div>
             </div>
