--- a/TicketEase/Views/Actors/Index.cshtml
+++ b/TicketEase/Views/Actors/Index.cshtml
@@ -8,9 +8,8 @@
 }
 
 @*Write code*@
-<div class="row">
+<div class="row" style="position: relative !important;">
     <div class="col-md-8 offset-md-2">
-
         <table class="table table-hover">
             <thead>
                 <tr class="text-center">
@@ -42,10 +41,9 @@
             </tbody>
         </table>
     </div>
-</div>
-
-<div style="position:fixed; right:25px; bottom:25px;" class="text-white">
-    <a asp-controller="Actors" asp-action="Create" class="btn btn-success"> <i class="bi bi-plus-circle"></i> Add New </a>
+    <div style="position:sticky; right:25px; bottom:25px;" class="text-white">
+        <a asp-controller="Actors" asp-action="Create" class="btn btn-primary"> <i class="bi bi-plus-circle"></i> Add New </a>
+    </div>
 </div>
 
 
