--- a/TicketEase/Views/Actors/Create.cshtml
+++ b/TicketEase/Views/Actors/Create.cshtml
@@ -33,7 +33,7 @@
                     </div>
 
                     <div class="form-group">
-                        <input type="submit" value="Add" class="btn btn-outline-success float-right"/>
+                        <input type="submit" value="Create" class="btn btn-outline-success float-right"/>
                         <a class="btn btn-outline-secondary" asp-action="Index">Show All</a>
                     </div>
                 </form>
@@ -44,9 +44,13 @@
 
 @section Scripts{
     <script>
-        $("#ProfilePictureURL").on("change", function (){
-            var output = document.getElementById("ProfilePictureURLPreview");
-            output.src = $(this).val();
-        })
+        $(document).ready(function () {
+            function updatePreview() {
+                var output = document.getElementById("ProfilePictureURLPreview");
+                output.src = $("#ProfilePictureURL").val();
+            }
+            updatePreview();
+            $("#ProfilePictureURL").on("change", updatePreview);
+        });
     </script>
 }
