--- a/TicketEase/Views/Shared/_Layout.cshtml
+++ b/TicketEase/Views/Shared/_Layout.cshtml
@@ -36,13 +36,13 @@
 							<a class="nav-link dropdown-toggle text-primary" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								<i class="bi bi-gear"></i> Management
 							</a>
-
-							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-
+              
+							<div class="dropdown-menu" style="background-color: #e3f2fd;" aria-labelledby="navbarDropdown">
 								<a class="dropdown-item" asp-controller="Cinemas" asp-action="Index"><i class="bi bi-camera-reels text-primary"></i> Cinemas</a>
 								<a class="dropdown-item" asp-controller="Producers" asp-action="Index"><i class="bi bi-headset text-primary"></i> Producers</a>
 								<a class="dropdown-item" asp-controller="Actors" asp-action="Index"><i class="bi bi-person-square text-primary"></i> Actors</a>
 							</div>
+              
 						</li>
 					</ul>
 
