--- a/TicketEase/Views/Actors/Delete.cshtml
+++ b/TicketEase/Views/Actors/Delete.cshtml
@@ -1,42 +1,43 @@
 ﻿@model Actor
 
 @{
-    ViewData["Title"] = "Add a new actor";
+    ViewData["Title"] = "Delete Actor";
 }
 
 <div class="row text">
     <div class="col-md-8 offset-2">
         <p>
-            <h1>Add a New actor</h1>
+            <h1>Delete confirmation for @Model.FullName</h1>
         </p>
         <div class="row">
             <div class="col-md-8 offset-2">
-                <form asp-action="Create">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group text-center">
-                        <img class="border-info rounded-circle" style="max-width:200px" id="ProfilePictureURLPreview" />
+                    <img class="border-info rounded-circle" style="max-width:200px" id="ProfilePictureURLPreview" />
                     </div>
                     <div class="form-group">
                         <label asp-for="ProfilePictureURL" class="control-label"></label>
-                        <input asp-for="ProfilePictureURL" class="form-control" />
+                        <input asp-for="ProfilePictureURL" class="form-control" readonly />
                         <span asp-validation-for="ProfilePictureURL" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="FullName" class="control-label"></label>
-                        <input asp-for="FullName" class="form-control" />
+                        <input asp-for="FullName" class="form-control" readonly />
                         <span asp-validation-for="FullName" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="Biographie" class="control-label"></label>
-                        <input asp-for="Biographie" class="form-control" />
+                        <input asp-for="Biographie" class="form-control" readonly />
                         <span asp-validation-for="Biographie" class="text-danger"></span>
                     </div>
 
                     <div class="form-group">
-                        <input type="submit" value="Create" class="btn btn-outline-success float-right"/>
-                        <a class="btn btn-outline-secondary" asp-action="Index">Show All</a>
+                        <form asp-action="Delete">
+                            <input type="hidden" asp-for="Id" />
+                            <input type="submit" value="Confirm" class="btn btn-dangeraccordion float-right"/>
+                        </form>
+                    <a class="btn btn-outline-success" asp-action="Index">Show All</a>
                     </div>
-                </form>
             </div>
         </div>
     </div>
