--- a/TicketEase/Views/Actors/Delete.cshtml
+++ b/TicketEase/Views/Actors/Delete.cshtml
@@ -34,7 +34,7 @@
                     <div class="form-group">
                         <form asp-action="Delete">
                             <input type="hidden" asp-for="Id" />
-                            <input type="submit" value="Confirm" class="btn btn-dangeraccordion float-right"/>
+                            <input type="submit" value="Confirm" class="btn btn-danger float-right"/>
                         </form>
                     <a class="btn btn-outline-success" asp-action="Index">Show All</a>
                     </div>
