--- a/TicketEase/Views/Producers/Index.cshtml
+++ b/TicketEase/Views/Producers/Index.cshtml
@@ -30,13 +30,16 @@
                             @Html.DisplayFor(ItemDisplay => item.Biographie)
                         </td>
                         <td class="align-middle">
-                            <a class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i> Edit </a> | 
-                            <a class="btn btn-info text-white"><i class="bi bi-eye"></i> Details </a> |
+                            <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i> Edit </a> |
+                            <a class="btn btn-info text-white" asp-action="Details" asp-route-id="@item.Id"><i class="bi bi-eye"></i> Details </a> |
                             <a class="btn btn-danger text-white"><i class="bi bi-trash"></i> Delete </a>
                         </td>
                     </tr>
                 }
             </tbody>
         </table>
+    </div>
+    <div style="position:sticky; right:25px; bottom:25px;" class="text-white">
+        <a asp-action="Create" class="btn btn-primary"> <i class="bi bi-plus-circle"></i> Add New </a>
     </div>
 </div>
