--- a/TicketEase/Views/Producers/Index.cshtml
+++ b/TicketEase/Views/Producers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Producer>
+@model IEnumerable<Producer>
 
 @{
     ViewData["title"] = "List of producers";
@@ -32,7 +32,7 @@
                         <td class="align-middle">
                             <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i> Edit </a> |
                             <a class="btn btn-info text-white" asp-action="Details" asp-route-id="@item.Id"><i class="bi bi-eye"></i> Details </a> |
-                            <a class="btn btn-danger text-white"><i class="bi bi-trash"></i> Delete </a>
+                            <a class="btn btn-danger text-white" asp-action="Delete" asp-route-id="@item.Id"><i class="bi bi-trash"></i> Delete </a>
                         </td>
                     </tr>
                 }
