--- a/TicketEase/Views/Movies/Create.cshtml
+++ b/TicketEase/Views/Movies/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿﻿
 @model NewMovieVM
 
-@using TicketEase.Data;
+@using TicketEase.Data.Enums;
  
 @{
     ViewData["Title"] = "Create a new movie";
@@ -49,22 +49,22 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label asp-for="CinemaId" class="control-label"></label>
-                                <select asp-for="CinemaId" class="form-control" asp-items="ViewBag.Cinemas"></select>
+                                <select class="form-select" asp-for="CinemaId" class="form-control" asp-items="ViewBag.Cinema"></select>
                                 <span asp-validation-for="CinemaId" class="text-danger"></span>
                             </div>
-                            @* <div class="form-group">
+                            <div class="form-group">
                                 <label asp-for="MovieCategory" class="control-label"></label>
-                                <select asp-for="MovieCategory" class="form-control" asp-items="Html.GetEnumSelectList<MovieCategory>()"></select>
+                                <select class="form-select" asp-for="MovieCategory" class="form-control" asp-items="Html.GetEnumSelectList<MovieCategory>()"></select>
                                 <span asp-validation-for="MovieCategory" class="text-danger"></span>
-                            </div> *@
+                            </div>
                             <div class="form-group">
                                 <label asp-for="ProducerId" class="control-label"></label>
-                                <select asp-for="ProducerId" class="form-control" asp-items="ViewBag.Producers"></select>
+                                <select class="form-select" asp-for="ProducerId" class="form-control" asp-items="ViewBag.Producer"></select>
                                 <span asp-validation-for="ProducerId" class="text-danger"></span>
                             </div>
                             <div class="form-group">
                                 <label asp-for="ActorIds" class="control-label"></label>
-                                <select asp-for="ActorIds" class="form-control"  asp-items="ViewBag.Actors" multiple></select>
+                                <select class="form-select" asp-for="ActorIds" class="form-control" asp-items="ViewBag.Actors" multiple></select>
                                 <span asp-validation-for="ActorIds" class="text-danger"></span>
                             </div>
                         </div>
