--- a/TicketEase/Views/Actors/Index.cshtml
+++ b/TicketEase/Views/Actors/Index.cshtml
@@ -41,9 +41,7 @@
             </tbody>
         </table>
     </div>
-    <div style="position:sticky; right:25px; bottom:25px;" class="text-white">
-        <a asp-controller="Actors" asp-action="Create" class="btn btn-primary"> <i class="bi bi-plus-circle"></i> Add New </a>
-    </div>
+    @await Html.PartialAsync("_CreateItem","Actors");
 </div>
 
 
