--- a/TicketEase/Views/Cinemas/Index.cshtml
+++ b/TicketEase/Views/Cinemas/Index.cshtml
@@ -43,9 +43,7 @@
             </tbody>
         </table>
     </div>
-    <div style="position:sticky; right:25px; bottom:25px;" class="text-white">
-        <a asp-action="Create" class="btn btn-primary"> <i class="bi bi-plus-circle"></i> Add New </a>
-    </div>
+    @await Html.PartialAsync("_CreateItem","Cinemas");
 </div>
 
 
