--- a/TicketEase/Views/Producers/Index.cshtml
+++ b/TicketEase/Views/Producers/Index.cshtml
@@ -39,7 +39,5 @@
             </tbody>
         </table>
     </div>
-    <div style="position:sticky; right:25px; bottom:25px;" class="text-white">
-        <a asp-action="Create" class="btn btn-primary"> <i class="bi bi-plus-circle"></i> Add New </a>
-    </div>
+    @await Html.PartialAsync("_CreateItem","Producers");
 </div>
