--- a/TicketEase/Views/Movies/Index.cshtml
+++ b/TicketEase/Views/Movies/Index.cshtml
@@ -16,7 +16,7 @@
                 <div class="details">
                     <h1>
                         @item.Name
-                        <a class="text-white float-right h6"><i class="bi bi-pencil-square"></i></a>
+                        <a class="text-white float-right h6 cursor-pointer" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i></a>
                     </h1>
                     <h2>@item.Description</h2>
                     <div class="tags">
