--- a/TicketEase/Views/Orders/ShoppingCart.cshtml
+++ b/TicketEase/Views/Orders/ShoppingCart.cshtml
@@ -99,7 +99,10 @@
             },
             //Execute the payment
             onAuthorize: function (data, actions) {
-                console.log("payment executed");
+                return actions.payment.execute().then(function () {
+                    var url = '@Url.Action("CompleteOrder","Orders",new {})';
+                    window.location.href = url;
+                });
             }
         }, '#paypal-btn');
     </script>
